# jenkins-homelab

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  casc.yaml  child-casc.yaml  create_container.yml  dev-requirements.txt  docker-compose.yaml  generate-jobs-yaml.py  jobs.toml  plugins.txt  pyproject.toml  renovate.json  requirements.txt  requirements.yml  setup  tests.py
.config/: ansible-lint.yml
.github/: tagrepo.py
.github/workflows/: release.yaml  test.yaml
playbooks/: create_container.yml
