[tool.poetry]
name = "jenkins-docker-torkel"
version = "1.0.0"
description = "A Jenkins docker image"
authors = ["Conner Crosby <conner@cavcrosby.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.5"
ansible = "6.1.0"
docker = "^5.0.3"
jcascutil = {git = "https://github.com/cavcrosby/jcascutil.git", rev = "main"}
pylib-cavcrosby = {git = "https://github.com/cavcrosby/pylib.git", rev = "main"}
cavcrosby-autotag = {git = "https://github.com/cavcrosby/autotag.git", rev = "main"}

[tool.poetry.dev-dependencies]
ansible-lint = "6.3.0"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-docstrings = "^1.6.0"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
