[tool.poetry]
name = "jenkins-torkel"
version = "1.0.0"
description = "A Jenkins instance within a docker image"
authors = ["Conner Crosby <conner@cavcrosby.tech>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
ansible = "6.4.0"
docker = "^6.0.0"

[tool.poetry.dev-dependencies]
ansible-lint = "6.7.0"
flake8 = "^5.0.0"
black = "^22.3.0"
flake8-docstrings = "^1.6.0"
yamllint = "^1.26.3"
api4jenkins = "^1.12"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
